# simple_logger

./: .gitignore  Cargo.toml  README.md
examples/: custom_colors.rs  default_colors.rs  rgb_colors.rs  usage.rs
src/: config.rs  lib.rs
src/loggers/: comblog.rs  logger.rs  logging.rs  mod.rs  termlog.rs  testlog.rs  writelog.rs
