[package]
name = "simple_logger"
version = "0.1.0"
edition = "2021"
readme = "README.md"

[features]
default = ["ansi_term", "termcolor", "local-offset"]
test = []
local-offset = ["time/local-offset"]

[dependencies]
log = { version = "0.4.20", features = ["std"] }
termcolor = { version = "1.3.0", optional = true }
ansi_term = { version = "0.12.1", optional = true }
time = { version = "0.3.29", features = ["formatting", "macros"] }
